<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity">


    <ScrollView
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:src="@drawable/pic" />
    </ScrollView>

    <TextView
        android:id="@+id/tv_UserId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="160dp"
        android:text="@string/string_id"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/tv_Phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_UserId"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/string_pw"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/tv_UserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="50dp"
        android:text="@string/string_nickname"
        android:textSize="20sp" />


</RelativeLayout>
